tests/baselines/reference/noSymbolForMergeCrash.errors.txt
final.ts(1,6): error TS2649: Cannot augment module 'A' with value exports because it resolves to a non-module entity.


==== initial.ts (0 errors) ====
    interface A { }
    namespace A {}
    
==== final.ts (1 errors) ====
    type A = {}
         ~
!!! error TS2649: Cannot augment module 'A' with value exports because it resolves to a non-module entity.
    